compiler/testData/diagnostics/tests/inference/emptyIntersectionTypes/kt45461_26.diag.txt
/kt45461_26.kt:13:44: error: type argument for a type parameter S can't be inferred because it has incompatible upper bounds: Out<String>, K, Out<Float> (multiple incompatible classes: String, Int)
    val x: Out<Float> = Bar<Out<String>>().takeFoo(foo)
                                           ^

